minor fixes
-added the correct link in home to jobs
-fixed job edit error where the company name wouldn't show
-fixed job-mngt where moderator or company control showed wrong text
fixed jobs filter search where end before was as text, not date
-fixed login where switching to registration would reload page
-changed general side-margin to 5%
-partially fixed bug where job component would be too high

--- a/Project/ESE-2018-Scaffolding-master/frontend/src/assets/css/main.css
+++ b/Project/ESE-2018-Scaffolding-master/frontend/src/assets/css/main.css
@@ -17,9 +17,10 @@
 
 
 .inner {
-  margin-right: 10%;
-  margin-left:  10%;
+  margin-right: 5%;
+  margin-left:  5%;
 }
+
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
@@ -192,6 +193,9 @@
       color: #fff !important;
     }
 
+    #three .inner article {
+      margin-top: 50px;
+    }
   }
 
 	@media screen and (max-width: 736px) {
@@ -224,6 +228,9 @@
       color: #fff !important;
     }
 
+    #three .inner article {
+      margin-top: 150px;
+    }
 
   }
 
@@ -257,6 +264,9 @@
       color: #fff !important;
     }
 
+    #three .inner article {
+      margin-top: 150px;
+    }
 
   }
 
